--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -12,3 +12,5 @@ header .logo{margin-left: -10px;}
 
 
 .fill.fya{background-image: url(../images/willdayble/youtube-screenie.jpg)}
+
+.projects{background: #f8f8f6}
