--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -14,3 +14,7 @@ header .logo{margin-left: -10px;}
 .fill.fya{background-image: url(../images/willdayble/youtube-screenie.jpg)}
 
 .projects{background: #f8f8f6}
+
+
+.tfol{}
+.tfol img{max-width: 140px;}
