--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -22,13 +22,26 @@ header .logo{margin-left: -10px;}
 
 .projects{background: #f8f8f6}
 
-
 .tfol{}
 .tfol img{max-width: 140px;}
-
 
 .feat a{display: block; width: 33.333%; float: left; position: relative; background: #000;}
 .feat a img{width: 100%;}
 .feat a i{font-size: 100px; color: #fff; position: absolute; top:50%; left: 50%; margin: -50px 0 0 -50px; opacity: 0.3;}
 .feat a:hover img{opacity: 0.5}
 .feat a:hover i{opacity: 1}
+
+
+.ego h1{font-family: "ff-meta-serif-web-pro"; font-weight: bold; color: #fff; font-size: 100px; padding: 50px 0;}
+
+@media (min-width: 1000px){
+	.ego h1{padding: 100px 0; font-size: 120px; min-height: 550px;}
+}
+
+@media (max-width: 700px){
+	.ego h1{font-size: 50px;}
+}
+
+@media (max-height: 550px){
+	.ego h1{padding: 30px 0;}
+}
