--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -52,3 +52,5 @@ header .logo{margin-left: -10px;}
 
 article dd .costs{float: right;}
 article dd .costs small{font-size: 60%; opacity: 0.5;}
+
+.reverse.red cite{color: #fff; opacity: 0.8;}
