--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -16,12 +16,16 @@ header .logo{margin-left: -10px;}
 .fill.magic{background-image: url(../images/willdayble/magic.gif)}
 .fill.woah{background-image: url(../images/willdayble/woah.gif)}
 
-.fill.disrupt{background-image: url(../images/willdayble/disrupt_leader.jpg); border-top: 1px solid #000;}
-.fill.disrupt .btn{background: #fff; color: #000; border: 2px solid rgba(0,0,0,0.2);}
+.fill.disrupt{background-image: url(../images/willdayble/disrupt_leader.jpg);}
+.fill.disrupt .btn{background: #fff; color: #000; display: inline-block;}
 .fill.disrupt .btn i{top:25px;}
 .fill.disrupt .btn em{display: block; font-size: 16px; color: #8a9085; padding: 5px 0 0}
 .fill.disrupt .btn:hover,
 .fill.disrupt .btn:focus{}
+
+@media (max-width: 500px){
+	.fill.disrupt .btn{display: block; text-align: left; white-space:normal;}
+}
 
 .projects{background: #f8f8f6}
 
