--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -15,6 +15,7 @@ header .logo{margin-left: -10px;}
 .fill.yeah{background-image: url(../images/willdayble/yeah.gif)}
 .fill.magic{background-image: url(../images/willdayble/magic.gif)}
 .fill.woah{background-image: url(../images/willdayble/woah.gif)}
+.fill.cash{background-image: url(../images/willdayble/cash.gif)}
 
 .fill.disrupt{background-image: url(../images/willdayble/disrupt_leader.jpg);}
 .fill.disrupt .btn{background: #fff; color: #000;}
