--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -83,6 +83,8 @@ article dd .costs small{font-size: 60%; opacity: 0.5;}
 .aboot p a:hover{text-decoration: none;}
 
 
+.flame{text-align: center; padding-bottom: 60px;}
+
 /* WOOD */
 
 header.wood a,
