--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -58,15 +58,15 @@ article.ego{background: url(../images/bio/will-dayble-80.jpg) no-repeat top; bac
 article.ego h1{font-family: "ff-meta-serif-web-pro"; font-weight: bold; color: #fff; font-size: 100px; padding: 50px 0;}
 
 @media (min-width: 1000px){
-	.ego h1{padding: 100px 0; font-size: 120px; min-height: 550px;}
+	article.ego h1{padding: 100px 0; font-size: 120px; min-height: 550px;}
 }
 
-@media (max-width: 700px){
-	.ego h1{font-size: 50px;}
+@media (max-width: 768px){
+	article.ego h1{font-size: 50px;}
 }
 
 @media (max-height: 550px){
-	.ego h1{padding: 30px 0;}
+	article.ego h1{padding: 30px 0;}
 }
 
 
