--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -55,13 +55,16 @@ header .btn:hover{text-decoration: none; border-bottom-color:#fff;}
 .feat a:hover i{opacity: 1}
 
 
-article.ego{background: url(../images/bio/will-dayble-80.jpg) no-repeat top; background-size: cover;}
+article.ego{background: url(../images/bio/will-dayble-80.jpg) no-repeat top; background-size: cover; padding: 50px 0 25px;}
 article.ego h1{font-family: "ff-meta-serif-web-pro"; font-weight: bold; color: #fff; font-size: 100px; padding: 50px 0;}
 
+/*
 @media (min-width: 1000px){
 	article.ego h1{padding: 100px 0; font-size: 120px; min-height: 550px;}
 }
+*/
 
+/*
 @media (max-width: 768px){
 	article.ego{height: 400px;}
 	article.ego h1{font-size: 50px;}
@@ -70,6 +73,7 @@ article.ego h1{font-family: "ff-meta-serif-web-pro"; font-weight: bold; color: #
 @media (max-height: 550px){
 	article.ego h1{padding: 30px 0;}
 }
+*/
 
 
 article dd .costs{float: right;}
