--- a/htdocs/design/css/hax.css
+++ b/htdocs/design/css/hax.css
@@ -38,9 +38,11 @@ header .btn:hover{text-decoration: none; border-bottom-color:#fff;}
 	.fill.disrupt .btn em{font-size: 19px;}
 }
 
+blockquote q{font-size: 48px; display: block; padding-bottom: 24px;}
+
 @media (max-width: 500px){
 	.fill.disrupt .btn{display: block; text-align: left; white-space:normal;}
-	blockquote q{font-size: 24px;}
+	blockquote q{font-size: 24px; padding-bottom: 12px;}
 }
 
 .projects{background: #f8f8f6}
@@ -113,3 +115,7 @@ a.sizeimg{background: rgba(0,0,0,0.1); display: block; padding: 10px;}
 a.sizeimg,
 a.sizeimg img{max-width: 100%;}
 a.sizeimg:hover{background: rgba(0,0,0,0.2);}
+
+
+.circleshot{width: 200px; height: 200px; margin: 0 auto 30px;}
+.circleshot img{width: inherit; height: inherit; border-radius: 999em;}
