--- a/htdocs/design/css/dude.css
+++ b/htdocs/design/css/dude.css
@@ -39,9 +39,9 @@ strong{font-weight: 600;}
 .btn-next{float: right; margin-right: -20px; margin-left: 0;}
 
 /* aside */
-aside{width: 33%; background: #232125 50% 50% no-repeat; background-size: cover; position: fixed; top:0; left: 0; bottom: 0;}
-aside p{ position: absolute; bottom: 0; left: 0; right: 0; text-align: center; margin: 0;}
-aside p a{font-size: 14px; display: inline-block; color: #ccc; padding: 13px 20px 15px; background: rgba(0,0,0,0.1); margin: 0 5px; bottom: -5px; position: relative;}
+aside{width: 33%; background: #333 no-repeat 50% 50%; background-size: cover; position: fixed; top:0; left: 0; bottom: 0;}
+aside p{ position: absolute; bottom: 0; left: 0; right: 0; text-align: center; margin: 0; }
+aside p a{font-size: 14px; display: inline-block; color: #ccc; padding: 13px 20px 15px; background: rgba(0,0,0,0.7); margin: 0 -2px; bottom: -5px; position: relative;}
 aside p a:hover{background: rgba(225,27,27,0.8); text-decoration: none; bottom: 0;	}
 
 aside p a i{font-size: 24px;}
@@ -50,8 +50,10 @@ aside p a i{font-size: 24px;}
 article{margin-left: 33%; padding: 50px 10%; border-bottom: 1px solid #eee;}
 article.alt{background: #f0f4f5}
 article h2,
-article h3{font-size: 54px; font-weight: normal; margin: 0; padding: 36px 0 0;}
-article h3{font-size: 36px;}
+article h3,
+article h4{font-size: 54px; line-height: 60px; font-weight: normal; margin: 0; padding: 36px 0 0;}
+article h3{font-size: 36px; line-height: 48px;}
+article h4{font-size: 24px; line-height: 36px;}
 article p,
 article dl{font-size: 19px; color: #555459; line-height: 24px; max-width: 600px;}
 
@@ -77,19 +79,22 @@ article dd{padding-left: 40px; border-bottom: 2px solid #eee; margin-left: -1px;
 
 
 article blockquote {margin: 0 -10% 30px;}
-article blockquote p{font-size: 42px; line-height: 60px; font-style: italic; position: relative; text-align: center; max-width: none;}
-article blockquote cite{display: block;color: #999; font-family: "Helvetica Neue", Helvetica, sans-serif; font-size: 19px; font-style: normal; text-align: center;}
+article blockquote p{font-size: 36px; line-height: 48px; font-style: italic; position: relative; text-align: center; max-width: none;}
+article blockquote p .lquo{margin-right: 2px;}
+article blockquote cite{display: block;color: #999; font-family: "Helvetica Neue", Helvetica, sans-serif; font-size: 14px; font-style: normal; text-align: center;}
 article blockquote cite a{color: inherit; text-decoration: underline;}
-article blockquote cite img{width: 60px; display: block; text-align: center; margin: 30px auto 15px;}
+article blockquote cite img{width: 60px; display: block; text-align: center; margin: 30px auto 15px; border-radius: 999em;}
 
 
 article blockquote.left{margin: 0 0 30px;}
-article blockquote.left p{text-align: left; max-width: 600px; font-size: 24px; line-height: 32px; margin: 0 auto 12px;}
-article blockquote.left cite{font-size: 14px; display: block; position: relative; padding:12px 0 40px 50px; text-align: left; max-width: 550px; margin: 0 auto;}
+article blockquote.left p{text-align: left; max-width: 600px; font-size: 24px; line-height: 32px; margin: 0 0 12px;}
+article blockquote.left cite{font-size: 14px; display: block; position: relative; padding:12px 0 40px 50px; text-align: left; max-width: 550px; margin: 15px  0;}
 article blockquote.left cite img{width: 40px; height: 40px; border-radius: 999em; position: absolute; top:0; left: 0; margin: 0;}
 
 
-.projects a{display: block; float: left; width: 33%; color: #ccc; font-family: "Helvetica Neue", Helvetica, sans-serif; font-size: 14px; text-align: center; padding: 40px 0; line-height: 18px; cursor: pointer;}
+
+.projects a{display: block; float: left; width: 33%; color: #999; font-family: "Helvetica Neue", Helvetica, sans-serif; font-size: 14px; text-align: center; padding: 40px 0; line-height: 18px; cursor: pointer;}
+.projects a strong{color: #232125;}
 .projects a img{max-width: 90%;display: block; margin: 0 auto 15px;}
 p:after,
 .projects:after{display: block; clear: both; content: '';}
@@ -108,8 +113,12 @@ p:after,
 hr{border: none;}
 
 
+.sm{display: none;}
+
 @media (min-width: 1000px){
 	.xs{display: none;}
+	.sm{display: inline;}	
+	aside p a{margin: 0 5px}
 }
 
 @media (max-width: 1000px){
@@ -134,7 +143,7 @@ hr{border: none;}
 
 @media (max-width: 600px){
 	aside{position: relative; bottom: auto; width: auto; height: 350px;}
-	aside p{background: rgba(0,0,0,0.5); left: auto;}
+	aside p{background: rgba(0,0,0,0.5); left: auto; display: none;}
 	article{width: auto; padding: 10px 40px; margin: 0;}
 
 }
