--- a/htdocs/design/css/dude.css
+++ b/htdocs/design/css/dude.css
@@ -55,8 +55,8 @@ article.alt{background: #f0f4f5}
 article h2,
 article h3,
 article h4{font-size: 54px; line-height: 60px; font-weight: normal; margin: 0; padding: 36px 0 0;}
-article h3{font-size: 36px; line-height: 48px;}
-article h4{font-size: 24px; line-height: 36px;}
+article h3{font-size: 32px; line-height: 36px;}
+article h4{font-size: 24px; line-height: 36px; max-width:550px;}
 article p,
 article dl{font-size: 19px; color: #555459; line-height: 24px; max-width: 600px;}
 
@@ -128,6 +128,11 @@ hr{border: none;}
 }
 
 @media (max-width: 1000px){
+
+	article h2 br,
+	article h3 br,
+	article h4 br{display: none;}
+
 	aside{width: 25%;}
 	article{margin-left: 25%; padding: 30px 8%;}
 	.btn-home{top:30px;}
@@ -154,9 +159,9 @@ hr{border: none;}
 	article{width: auto; padding: 10px 40px; margin: 0;}
 }
 
-aside{background-image: url(../images/aside/yeah.gif);}
+
 aside.laff{background-image: url(../images/aside/laff.jpg);}
-aside.wanker{background-image: url(../images/aside/teaching.jpg);}
+aside{background-image: url(../images/aside/teaching.jpg);}
 aside.wood{background-image: url(../images/aside/stacked_wood.jpg);}
 aside.optimus{background-image: url(../images/aside/transformerbutton.gif);}
 aside.yeah{background-image: url(../images/aside/yeah.gif);}
